Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -183,7 +183,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Passenger "
+    "class Passenger: \n",
+    "    pass"
    ]
   },
   {
