--- a/index.ipynb
+++ b/index.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,12 +189,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Passenger object at 0x7f290806f748> <__main__.Passenger object at 0x7f290806f710>\n"
+     ]
+    }
+   ],
    "source": [
     "meryl = Passenger() \n",
-    "daniel = Passenger\n",
+    "daniel = Passenger() \n",
     "print(meryl, daniel)"
    ]
   },
