--- a/index.ipynb
+++ b/index.ipynb
@@ -175,7 +175,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Driver:"
+   ]
   },
   {
    "cell_type": "code",
@@ -219,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flatiron_taxi = None\n",
+    "flatiron_taxi = Driver() \n",
     "print(flatiron_taxi)"
    ]
   },
