Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -176,7 +176,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Driver:"
+    "class Ride"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Driver: \n",
+    "    pass"
    ]
   },
   {
