--- a/index.ipynb
+++ b/index.ipynb
@@ -172,16 +172,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Ride"
+    "class Ride: \n",
+    "    pass "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,14 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Passenger object at 0x7f290806f748> <__main__.Passenger object at 0x7f290806f710>\n"
+      "<__main__.Passenger object at 0x7f290806f9e8> <__main__.Passenger object at 0x7f290806f9b0>\n"
      ]
     }
    ],
@@ -227,9 +228,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Driver object at 0x7f290806f940>\n"
+     ]
+    }
+   ],
    "source": [
     "flatiron_taxi = Driver() \n",
     "print(flatiron_taxi)"
