--- a/index.ipynb
+++ b/index.ipynb
@@ -253,14 +253,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Ride object at 0x7f290806fb38> <__main__.Ride object at 0x7f290806fb00>\n"
+     ]
+    }
+   ],
    "source": [
-    "ride_to_school = None\n",
-    "ride_home = None\n",
+    "ride_to_school = Ride() \n",
+    "ride_home = Ride() \n",
     "print(ride_to_school, ride_home)"
    ]
   },
